# perf-model

./: .gitignore  README.md  pyproject.toml  ruff.toml
eval/gpu_io/: README.md
lammps/pm/: cxi_snapshot.sh
model/cxi/: load_counters.py  modeling_cxi.py  time_estimator.py
model/dcgm/: data_classes.py  job_processor.py  modeling_dcgm_mg.py  modeling_dcgm_pm.py  modeling_dcgm_sg.py  perf_calculators.py
model/hw_config/: hw_specs.py
mpi_sync/: cxi_monitor.sh  cxi_snapshot.sh  run_barrier_host.sh  run_bibw_host.sh  run_coll_host.sh  run_p2p_host.sh
omb/: cxi_monitor.sh  run_p2p_host.sh
perf_modeling/cxi/: modeling_cxi.py  mpi_modeling.py  time_estimator.py
perf_modeling/dcgm/: job_processor.py  modeling_dcgm_mg.py  modeling_dcgm_pm.py  modeling_dcgm_sg.py  perf_calculators.py
perf_modeling/dcgm_modeling/: data_classes.py  hw_specs.py  job_processor.py  perf_modeling_mg.py  perf_modeling_pm.py  perf_modeling_sg.py  performance_calculators.py  pm_node_config.py  utils.py  workload_processor.py
perf_modeling/mpi_modeling/: build_matrix.py  constants.py  lambda_tuning.py  load_counters.py  mpi_modeling.py  solve_global.py  solver.py  (+1 more)
plots/: plot_ack.py  plot_bars.py  plot_header_inline.py  plot_mpi_bars.py  plot_mpi_bars_allreduce.py  plot_mpi_bars_bibw.py  plot_mpi_bars_bibw_large.py  plot_mpi_bars_large.py  plot_mpi_message_dist.py  plot_mtu.py  plot_scatter.py  plot_tc_flip.py  plot_violin.py
tools/: build_job_dataframes.py  combine_and_split_dcgm_jobs.py  compute_node_stats.py  detect_cross_folder_jobs.py  get_single_gpu_jobs.py  slice_sample_pkl.py
(+114 files in other folders)
